<resources>
    <string name="app_name">MPD Coursework</string>
    <string name="name_ID">Conall McLuskie S1509449</string>
    <string name="legal_tag">Contains British Geological Survey materials ©NERC 2019</string>
    <string name="Option">Options</string>
    <string name="Sort_Menu">Sort</string>
    <string name="BUTTON_Find_Data">Press To Get Data</string>
    <string name="Data_Button_Descriptor">Find Earthquakes: </string>
    <string name="Placeholder_Date">Mon 01-Jan-2019</string>
    <string name="Placeholder_Time">00:00:00</string>
    <string name="Placeholder_Location">Glasgow, Scotland</string>
    <string name="Placeholder_Latitude">55.747</string>
    <string name="Placeholder_Longitude">55.747</string>
    <string name="Placeholder_Depth">7km</string>
    <string name="Placeholder_Magnitude">0.5</string>
    <string name="Data_Header_Date">Date</string>
    <string name="Data_Header_Time">Time</string>
    <string name="BUTTON_More_Info">More Info</string>
    <string name="TITLE_Sort">Sort Menu</string>
    <string name="BUTTON_North_Sort">North</string>
    <string name="BUTTON_East_Sort">East</string>
    <string name="BUTTON_West_Sort">West</string>
    <string name="BUTTON_South_Sort">South</string>
    <string-array name="DROPDOWN_Values">
        <item>Location</item>
        <item>Date + Time</item>
        <item>Magnitude</item>
        <item>Depth</item>
    </string-array>

    <string-array name="DROPDOWN_Sort_Conditions">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>

</resources>
