<?xml version="1.0" encoding="utf-8"?>
<!--
Conall McLuskie
S1509449
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <TextView
        android:id="@+id/dateDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="200dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:text="@string/Placeholder_Date"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/timeDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="200dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:text="@string/Placeholder_Time"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/locationDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="200dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:text="@string/Placeholder_Location"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/latitudeDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="200dp"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:text="55.747, 55.474"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/depthDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="200dp"
        android:layout_marginTop="250dp"
        android:ems="10"
        android:text="@string/Placeholder_Depth"
        android:textAlignment="center" />
    <TextView
        android:id="@+id/magnitudeDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="200dp"
        android:layout_marginTop="300dp"
        android:ems="10"
        android:text="@string/Placeholder_Magnitude"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:text="Date"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:text="Time"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:text="Location"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:text="Latitude, Longitude"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="250dp"
        android:ems="10"
        android:text="Depth"
        android:textAlignment="center"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="300dp"
        android:ems="10"
        android:text="Magnitude"
        android:textAlignment="center"
        android:textStyle="bold" />

</RelativeLayout>
